# mantaray_rpi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_deps.sh  package.xml  setup.py
config/: pid_setting.yaml
data/: twice_20v_force_pwm.csv
include/: NgimuReceive.h  attitude_controller.h  auv_structs.h  fsm.h  fsm_base.h  fsm_lqr.h  fsm_passive.h  fsm_pcontrol.h  include.h  pid.h
launch/: dry_test.launch  dvl_read.launch  dvl_test.launch  ekf_imu.launch  mantaray.launch  p_control.launch  point_and_go.launch  point_and_go_w_pid.launch  sim_test.launch  thruster_controller.launch
msg/: Dvl.msg
params/: ekf_params.yaml
scripts/: actualTeensyComms.py  clock.py  comp_controller.py  comp_main.py  comp_setpoint_pub.py  comp_state_pub.py  comp_thruster_comms.py  control_pi_serial.py  custom_util.py  dvl_publisher.py  fsm.py  fsm_pcontrol.py  fsm_simple_pid.py  fsm_simple_pid_v2.py  fsm_state.py  getInitOrientation.py  imu_publisher.py  joy_to_thruster.py  kalman_filter.py  main.py  orientation_reader.py  pid_control.py  qp_attitude_controller.py  read_test.py  requirements.txt  teensyComms.py  test_comp_thruster_comms.py  write_test.py
scripts/dvl_test/: a.out  d  dvl  dvlProtocol.cpp  dvlProtocolVers2.cpp  dvl_publisher.cpp  dvl_publisher.h  python_protocol.py  serialib.cpp  simple_python_protocol.py  temp_readDVL.cpp
src/: .imu_publisher.cpp.swp  NgimuReceive.c  dvl_publisher.cpp  dvl_publisher.h  ekf_data_prep.cpp  fsm.cpp  fsm_base.cpp  fsm_lqr.cpp  fsm_passive.cpp  fsm_pcontrol.cpp  imu_publisher.cpp  main.cpp  pid.cpp  thruster_controller.cpp
src/fsm/: attitude_controller.cpp  fsm.cpp  fsm_base.cpp  fsm_lqr.cpp  fsm_passive.cpp  fsm_pcontrol.cpp  fsm_pid.cpp
